# tryke

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  justfile  pyproject.toml  rustfmt.toml  zensical.toml
.claude/: launch.json  settings.json
.claude/hooks/: session-start.sh
.claude/skills/pytest-to-tryke-migration/: SKILL.md
.codex/: hooks.json
.codex/hooks/: session-start.sh
.config/: nextest.toml
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  playground.yml  release.yml
.wrangler/cache/: pages.json  wrangler-account.json
.zed/: settings.json
benchmarks/: .gitignore  README.md  RESULTS.md  generate.py  run.sh  summarize.py
benchmarks/results/: discovery_50.json  discovery_500.json  discovery_5000.json  parallel_50.json  parallel_500.json  parallel_5000.json  sequential_50.json  sequential_500.json  sequential_5000.json  system.json
benchmarks/suites/: conftest.py
benchmarks/suites/suite_50/: test_sync.py
benchmarks/suites/suite_500/: test_sync.py
benchmarks/suites/suite_5000/: test_sync.py
crates/tryke/: Cargo.toml
crates/tryke/src/: cli.rs  cli_docs.rs  discovery.rs  execution.rs  fdlimit.rs  git.rs  graph.rs  lib.rs  main.rs  watch.rs
crates/tryke/src/snapshots/: tryke__tests__command.snap  tryke__tests__discover_command.snap
crates/tryke/tests/: cli_docs.rs  server_stdio.rs  snapshots.rs
crates/tryke/tests/snapshots/: snapshots__snapshot_collect_grouped_tests.snap  snapshots__snapshot_collect_grouped_tests.snap.new  snapshots__snapshot_failed_with_assertion.snap  snapshots__snapshot_failed_with_traceback.snap  snapshots__snapshot_grouped_test_output.snap  snapshots__snapshot_grouped_test_output.snap.new  snapshots__snapshot_next_two_pass_one_fail_two_files.snap  snapshots__snapshot_sugar_two_files_mixed.snap
crates/tryke_config/: Cargo.toml
crates/tryke_config/src/: lib.rs
crates/tryke_dev/: Cargo.toml
crates/tryke_discovery/: Cargo.toml
crates/tryke_discovery/src/: cache.rs  db.rs  discoverer.rs  import_graph.rs  lib.rs  source.rs
crates/tryke_discovery/src/filesystem/: cache.rs  db.rs  discoverer.rs  mod.rs
crates/tryke_reporter/: Cargo.toml
crates/tryke_reporter/src/: clear.rs  diagnostic.rs  dot.rs  duration.rs  json.rs  junit.rs  lib.rs  live.rs  llm.rs  next.rs  progress.rs  reporter.rs  sugar.rs  summary.rs  text.rs
crates/tryke_reporter/src/clear/: fallback.rs  terminal.rs
crates/tryke_reporter/src/live/: fallback.rs  mod.rs  terminal.rs
crates/tryke_runner/: Cargo.toml
crates/tryke_runner/src/: lib.rs  pool.rs  protocol.rs  schedule.rs  worker.rs
crates/tryke_server/: Cargo.toml
crates/tryke_server/src/: change.rs  client.rs  handler.rs  lib.rs  protocol.rs  server.rs  watcher.rs
crates/tryke_snapshot/: Cargo.toml
crates/tryke_snapshot/src/: lib.rs
crates/tryke_test_support/: Cargo.toml
crates/tryke_test_support/src/: lib.rs
crates/tryke_testing/: Cargo.toml
crates/tryke_testing/src/: lib.rs
crates/tryke_types/: Cargo.toml
crates/tryke_types/src/: filter.rs  lib.rs
crates/tryke_wasm/: Cargo.toml
crates/tryke_wasm/src/: lib.rs
crates/tryke_watcher/: Cargo.toml
crates/tryke_watcher/src/: lib.rs
demo/: demo.tape  pyproject.toml  sample.py
demo/tests/: test_math.py
docs/: CNAME  api.md  benchmarks.md  cli.md  index.md  migration.md  quickstart.md  static-analysis.md  why.md
docs/assets/: generate_social.py
docs/concepts/: cases.md  client-server.md  concurrency.md  discovery.md  soft-assertions.md
docs/guides/: async.md  changed-mode.md  configuration.md  doctests.md  editor-integration.md  filtering.md  graph.md  in-source-testing.md  installation.md  reporters.md  running-tests.md  watch-mode.md  writing-tests.md
docs/overrides/: home.html  main.html
docs/plans/: 2026-03-06-worker-scheduler-design.md
docs/reference/: api.md  cli.md
docs/skills/: pytest-to-tryke-migration.md
docs/stylesheets/: ansi.css  extra.css
overrides/: main.html
playground/: eslint.config.cjs  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
playground/examples/: helpers.py  mathlib.py  test_basics.py  test_cases.py  test_describe.py  test_fixtures.py  test_helpers.py  test_kitchen_sink.py  test_markers.py  test_math.py  test_soft.py
playground/src/: main.tsx  vite-env.d.ts
playground/src/Editor/: Chrome.tsx  DiscoveryPanel.tsx  Editor.tsx  FixtureGraphView.tsx  GraphView.tsx  SecondarySideBar.tsx  SourceEditor.tsx  TerminalOutput.tsx  constants.ts  index.tsx  types.ts
playground/src/styles/: global.css
playground/src/workers/: pyodide.worker.ts
python/: tryke_guard.py
python/tryke/: __init__.py  coverage.py  expect.py  hooks.py  playground.py  runner.py  worker.py
scripts/: generate_reporter_examples.py  release.sh
tests/: test_benchmark_summarize.py  test_cases.py  test_coverage.py  test_describe.py  test_doctest.py  test_expect.py  test_hooks.py  test_hooks_e2e.py  test_in_source_guard.py  test_playground.py  test_worker.py
tests/typed/: test_cases_typing.py  test_expect_typing.py
