[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.lints.clippy]
pedantic = "deny"

[workspace.package]
version = "0.0.7"
edition = "2024"
rust-version = "1.93"
homepage = "https://github.com/thejchap/tryke"
documentation = "https://github.com/thejchap/tryke"
repository = "https://github.com/thejchap/tryke"
authors = ["Justin Chapman <commonmodestudio@gmail.com>"]
license = "MIT"

[workspace.dependencies]
salsa = "0.26"
ignore = "0.4"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
rayon = "1"
miette = { version = "7", features = ["fancy", "syntect-highlighter"] }
owo-colors = { version = "4", features = ["supports-color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "process"] }
tokio-stream = "0.1"
notify = "6"
notify-debouncer-mini = "0.4"
toml = "1.0"
tryke = { path = "crates/tryke" }
tryke_config = { path = "crates/tryke_config" }
tryke_discovery = { path = "crates/tryke_discovery" }
tryke_reporter = { path = "crates/tryke_reporter" }
tryke_runner = { path = "crates/tryke_runner" }
tryke_server = { path = "crates/tryke_server" }
tryke_types = { path = "crates/tryke_types" }
