[project]
name = "tryke"
dynamic = ["version"]
description = "tryke — python testing tool"
readme = "README.md"
authors = [{ name = "Justin Chapman", email = "commonmodestudio@gmail.com" }]
requires-python = ">=3.12"
dependencies = []
keywords = ["testing", "test", "framework", "runner", "assertions"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/thejchap/tryke"
Documentation = "https://thejchap.github.io/tryke/"
Repository = "https://github.com/thejchap/tryke"
"Bug Tracker" = "https://github.com/thejchap/tryke/issues"

[tool.ty.src]
exclude = ["benchmarks/suites"] # TODO

[tool.ruff]
exclude = ["benchmarks/suites"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]

# Tryke's public API puts `Depends(...)` in parameter defaults on purpose
# (FastAPI-style dependency injection). B008 (function call in default)
# and PT028 (pytest: default argument on test function parameter) both
# flag that pattern. Exempt files that exercise the @fixture surface.
[tool.ruff.lint.per-file-ignores]
"tests/test_hooks.py" = ["B008", "PT028"]
"python/tryke/hooks.py" = ["B008"]

[tool.tryke]
exclude = ["benchmarks/suites", "demo"]

[tool.maturin]
bindings = "bin"
manifest-path = "crates/tryke/Cargo.toml"
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv.build-backend]
module-root = "python/tryke"

[dependency-groups]
dev = [
  "ruff~=0.15.4",
  "ty~=0.0.29",
  "zensical>=0.0.26",
  "mkdocstrings-python>=1.16.12",
  "tryke",
]
