[project]
name = "tryke"
dynamic = ["version"]
description = "Tryke - A Python testing tool"
readme = "README.md"
authors = [{ name = "Justin Chapman", email = "commonmodestudio@gmail.com" }]
requires-python = ">=3.12"
dependencies = []
keywords = ["testing", "test", "framework", "runner", "assertions"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/thejchap/tryke"
Documentation = "https://tryke.dev/"
Repository = "https://github.com/thejchap/tryke"
"Bug Tracker" = "https://github.com/thejchap/tryke/issues"

[tool.ruff]
# Treat `python/` as a source root so files like `python/tryke_guard.py`
# are recognised as top-level modules instead of implicit namespace
# packages (INP001). Mirrors maturin's `python-source = "python"`.
src = ["python", "playground/examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]

# Tryke's public API puts `Depends(...)` in parameter defaults on purpose
# (FastAPI-style dependency injection). B008 (function call in default)
# and PT028 (pytest: default argument on test function parameter) both
# flag that pattern. Exempt files that exercise the @fixture surface.
[tool.ruff.lint.per-file-ignores]
"tests/test_hooks.py" = ["B008", "PT028"]
# Same Depends(...) defaults. ARG001/PT019 additionally fire on the
# pyodide_root fixture that many tests depend on only for its setup/teardown
# side effects; tryke has no `usefixtures` equivalent, so the parameter is the
# only way to request it.
"tests/test_playground.py" = ["B008", "PT028", "ARG001", "PT019"]
"python/tryke/hooks.py" = ["B008"]
"playground/examples/*.py" = ["ANN", "INP001", "T201", "FBT003", "EM101", "TRY003", "S101", "PT"]
# This test deliberately spawns subprocesses to prove that the in-source
# testing flag does NOT leak into child processes. The subprocess args are
# fully controlled (sys.executable, fixed -c script), so S603 is spurious.
"tests/test_in_source_guard.py" = ["S603"]

[tool.tryke]
# Treat both the repo root and `python/` as source roots for absolute
# import resolution, mirroring `[tool.maturin] python-source = "python"`.
# Without this, `from tryke.worker import ...` in tests/ would not
# resolve to python/tryke/worker.py in the import graph.
src = [".", "python"]
# Playground examples include intentionally-failing tests for the browser
# demo; exclude them from the project test suite.
exclude = ["playground/examples"]

[tool.maturin]
bindings = "bin"
manifest-path = "crates/tryke/Cargo.toml"
python-source = "python"
include = [{ path = "python/tryke_guard.py", format = ["sdist", "wheel"] }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv.sources]
tryke = { workspace = true }

[dependency-groups]
dev = [
  "ruff~=0.15.4",
  "ty~=0.0.29",
  "zensical>=0.0.26",
  "mkdocstrings-python>=1.16.12",
  "tryke",
  # Pygments 2.20 added `html.escape` around the formatter's `filename`
  # option, which crashes on the `None` that pymdown-extensions 10.21's
  # `BlockHtmlFormatter` passes through when a code block has no title.
  # Drop this pin once pymdown-extensions stops passing None.
  "pygments<2.21",
  "bump-my-version>=1.3",
  "git-cliff>=2.12",
]

[tool.bumpversion]
current_version = "0.0.29"
commit = true
tag = true
tag_name = "v{new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
message = "chore: bump: version {current_version} → {new_version}"
pre_commit_hooks = ["uv sync", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "Cargo.toml"
regex = true
search = '\[workspace\.package\]\nversion = "{current_version}"'
replace = '[workspace.package]\nversion = "{new_version}"'
