[package]
name = "tryke"
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clap-verbosity-flag = "3"
env_logger = "0.11"
log = "0.4"
tryke_discovery = { workspace = true }
tryke_reporter = { workspace = true }
tryke_types = { workspace = true }

[dev-dependencies]
insta = "1"
serde_json = "1"
