[package]
name = "tryke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "tryke"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3"
clearscreen = "4.0.5"
env_logger = "0.11"
log = "0.4"
notify-debouncer-mini = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tryke_config = { workspace = true }
tryke_discovery = { workspace = true }
tryke_reporter = { workspace = true }
tryke_runner = { workspace = true }
tryke_server = { workspace = true }
tryke_types = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
serde_json = "1"
tempfile = "3"
