[package]
name = "tryke_discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ignore = { workspace = true }
log = "0.4"
rayon = { workspace = true }
salsa = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
tryke_types = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
