[package]
name = "tryke_reporter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ctrlc = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tryke_types = { workspace = true }

[lints]
workspace = true
