[package]
name = "tryke_reporter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["terminal"]
terminal = [
  "dep:clearscreen",
  "dep:console",
  "dep:ctrlc",
  "dep:indicatif",
]

[dependencies]
clearscreen = { version = "4.0.6", optional = true }
console = { workspace = true, optional = true }
ctrlc = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
log = "0.4"
miette = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tryke_types = { workspace = true }

[lints]
workspace = true
