[package]
name = "tryke_runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
async-channel = { workspace = true }
indexmap = "2"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tryke_types = { workspace = true }

[dev-dependencies]
tempfile = "3"
tryke_test_support = { workspace = true }

[lints]
workspace = true
