[package]
name = "tryke_server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
bytes = "1"
ignore = { workspace = true }
log = "0.4"
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tryke_discovery = { workspace = true }
tryke_reporter = { workspace = true }
tryke_runner = { workspace = true }
tryke_types = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
