[package]
name = "tryke_watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
log = "0.4"
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio = { workspace = true }
tryke_discovery = { workspace = true, features = ["filesystem"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
